--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ a:focus {
     .navbar-light .navbar-nav .nav-link:focus {
         padding: 10px 10px 8px 10px;
         font-family: 'Nunito', sans-serif;
-        color: #797979;
+        color: #669afa;
         font-size: 18px;
         font-weight: 600;
     }
