--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ a:focus {
 .navbar .navbar-brand {
     margin: 0;
     color: #003366;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 0px;
     font-weight: 700;
     font-family: 'Nunito', sans-serif;
@@ -212,6 +212,28 @@ a:focus {
     }
 }
 
+@media (max-width: 344px) {   
+    .navbar {
+        padding: 10px;
+        background: #ffffff !important;
+    }
+    
+    .navbar .navbar-brand {
+        color: #003366;
+    }
+    
+    .navbar .navbar-nav {
+        margin-top: 15px;
+    }
+    
+    .navbar a.nav-link {
+        padding: 5px;
+    }
+    
+    .navbar .dropdown-menu {
+        box-shadow: none;
+    }
+}
 
 /*******************************/
 /********** Hero CSS ***********/
@@ -702,7 +724,7 @@ a:focus {
 .about {
     position: relative;
     width: 100%;
-    padding: 45px 0;
+    padding: 30px 0;
 }
 
 .about .section-header {
@@ -716,7 +738,7 @@ a:focus {
 
 .about .about-img img {
     position: relative;
-    width: 80%;
+    width: 100%;
     border-radius: 100px;
 }
 
@@ -724,7 +746,7 @@ a:focus {
     position: absolute;
     z-index: 1;
     top: 50%;
-    left: 41.5%;
+    left: 50%;
     transform: translateX(-50%) translateY(-50%);
     box-sizing: content-box;
     display: block;
@@ -831,6 +853,7 @@ a:focus {
 
 .about .about-text p {
     font-size: 16px;
+    text-align: justify;
 }
 
 .about .about-text a.btn {
@@ -960,11 +983,17 @@ a:focus {
 
 @media (max-width: 900px) {
     .nav-pills .nav-link {
-        padding: 8px 15px !important; /* Ajusta el espaciado en pantallas pequeñas */
+        padding: 8px 5px !important; /* Ajusta el espaciado en pantallas pequeñas */
         font-size: 14px !important; /* Ajusta el tamaño de fuente en pantallas pequeñas */
     }
 }
 
+@media (max-width: 344px) {
+    .nav-pills .nav-link {
+        padding: 8px 2px !important; /* Ajusta el espaciado en pantallas pequeñas */
+        font-size: 13px !important; /* Ajusta el tamaño de fuente en pantallas pequeñas */
+    }
+}
 
 
 
@@ -973,7 +1002,7 @@ a:focus {
 /*******************************/
 .menu {
     position: relative;
-    padding: 45px 0 15px 0;
+    padding: 0 0 15px 0;
 }
 
 .menu .menu-tab {
@@ -1100,7 +1129,7 @@ a:focus {
 .team {
     position: relative;
     width: 100%;
-    padding: 45px 0 15px 0;
+    padding: 0 0 15px 0;
 }
 
 .team .team-item {
