--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a:focus {
 }
 
 .navbar .navbar-brand span {
-    color: #6699CC;
+    color: #639ed8;
 }
 
 .navbar .navbar-brand:hover {
@@ -168,7 +168,7 @@ a:focus {
     .navbar-light .navbar-nav .nav-link:focus {
         padding: 10px 10px 8px 10px;
         font-family: 'Nunito', sans-serif;
-        color: #669afa;
+        color: #75c1fc;
         font-size: 18px;
         font-weight: 600;
     }
@@ -180,7 +180,7 @@ a:focus {
 
     .navbar-light .navbar-nav .nav-link:hover,
     .navbar-light .navbar-nav .nav-link.active {
-        color: #1281d5;
+        color: #c9e8ff;
     }
     
     .navbar-light.nav-sticky .navbar-nav .nav-link:hover,
