--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,68 @@ a:focus {
 
 
 
+/**********************************/
+/*********** estilo inicio sesion **********/
+/**********************************/
+
+.login-card {
+    max-width: 800px;
+    height: auto;
+    margin: auto;
+    margin-top: 100px;
+    padding: 3px;
+    border-radius: 45px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    order: 1;  
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 25px;
+    order: 2;  
+}
+
+.custom-btn {
+    width: 100%;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 12px;
+    border-radius: 25px;
+}
+
+.custom-btn:hover {
+    background-color: #0056b3;
+}
+
+.form-control {
+    border-radius: 25px;
+    padding: 12px;
+}
+
+@media (max-width: 768px) {
+    .login-card {
+        padding: 15px;
+    }
+
+    iframe {
+        height: 250px;  
+    }
+}
+
+
+
+
 
  /**********************************/
 /*********** Modal acervo **********/
