--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ iframe {
     bottom: 0;
     left: 0;
      
-    background: linear-gradient(rgba(40, 130, 255, 0.687), rgb(255, 255, 255));
+    background: linear-gradient(rgba(131, 156, 184, 0.714), rgb(255, 255, 255));
     z-index: 1;
 }
 
@@ -469,7 +469,7 @@ iframe {
 
 .carousel .carousel-text h1 {
     text-align: center;
-    color: #ffffff;
+    color: #167ac6;
     font-size: 60px;
     font-weight: 700;
     margin-bottom: 30px;
@@ -480,7 +480,7 @@ iframe {
 }
 
 .carousel .carousel-text p {
-    color: #ffffff;
+    color: #52748d;
     text-align: justify;
     font-size: 20px;
     margin-bottom: 35px;
@@ -672,7 +672,7 @@ iframe {
     margin-bottom: 45px;
     padding: 150px 0 90px 0;
     text-align: center;
-    background: linear-gradient(rgba(40, 130, 255, 0.687), rgb(255, 255, 255)), url(../img/carousel-1.jpg);
+    background: linear-gradient(rgba(131, 156, 184, 0.714), rgb(255, 255, 255)), url(../img/carousel-1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2358,7 +2358,7 @@ main{
     width: 100%;
     padding: 20px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 10px;
 }
 
 .contenedor__todo{
@@ -2370,18 +2370,19 @@ main{
 
 .caja__trasera{
     width: 100%;
-    padding: 10px 20px;
+    padding: 3px 20px;
     display: flex;
     justify-content: center;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    background-color: rgba(0, 128, 255, 0.5);
-
+    background-color: #9ec4e9;
+    border-radius: 25px;
+    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.2);  
 }
 
 .caja__trasera div{
     margin: 100px 40px;
-    color: white;
+    color: #091420;
     transition: all 500ms;
 }
 
@@ -2403,20 +2404,21 @@ main{
 
 .caja__trasera button{
     padding: 10px 40px;
-    border: 2px solid #fff;
+    border: 2px solid #4583c4;
     font-size: 14px;
     background: transparent;
     font-weight: 600;
     cursor: pointer;
-    color: white;
+    color: #4583c4;
     outline: none;
     transition: all 300ms;
     border-radius: 25px;
+    
 }
 
 .caja__trasera button:hover{
-    background: #fff;
-    color: #46A2FD;
+    background: #6699CC;
+    color: #ffffff;
 }
 
 /*Formularios*/
@@ -2428,7 +2430,7 @@ main{
     max-width: 380px;
     position: relative;
     top: -185px;
-    left: 10px;
+    left: 20px;
 
     /*La transicion va despues del codigo JS*/
     transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
@@ -2436,13 +2438,15 @@ main{
 
 
 
-.contenedor__login-register form{
+.contenedor__login-register form {
     width: 100%;
     padding: 80px 20px;
-    background: white;
+    background: rgb(255, 255, 255);
     position: absolute;
-    border-radius: 20px;
+    border-radius: 25px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);  
 }
+
 
 .contenedor__login-register form h2{
     font-size: 30px;
