--- a/css/style.css
+++ b/css/style.css
@@ -209,14 +209,24 @@ iframe {
 
 /* Ajuste para que la imagen ocupe la mitad izquierda de la tarjeta */
 .card-image {
-
     object-fit: cover;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-
     width: 100%;
-    height: 180px;
-    object-fit: cover;
+    height: 80px;
+    .card-image {
+        object-fit: cover;
+        width: 100%;
+        height: 80px;
+    
+        /* Bordes superiores redondeados */
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+    
+        /* Bordes inferiores cuadrados */
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+    
+  
 }
 
 /* Ajuste para que el contenido esté en el lado derecho */
@@ -1232,6 +1242,7 @@ iframe {
 
 .menu .menu-tab {
     position: relative;
+    
 }
 
 .menu .menu-tab img {
