--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    
 }
 
 h1,
@@ -66,7 +67,7 @@ a:focus {
 }
 
 .container-fluid {
-    max-width: 1366px;
+    max-width: 100%;
 }
 
 .back-to-top {
@@ -433,7 +434,7 @@ iframe {
 .carousel {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     min-height: 400px;
     background: #ffffff;
 }
